----- StarLib Changelog -----
9/5/2012, Stan
- Removed awt requirements from StarLib and LogicThread classes
- Separated out FardinDeere app and StanTestApp into own project following Adam's changes

9/4/2012, Adam
- Changed SimSettings to use the builder pattern. A separate "settings initializer" is no longer required.
- Changed MotionParameters defaults to values which provides smoother motion.
- MessageContents can now be retrieved and compared

9/1/2012, Adam
- Cleaned up GlobalLogger
- Changed simulator dataflow: Applications now call the simulator to simulate themselves instead of the other way around.
- Updated SimSettings to contain nonstatic public variables. Removed unnecessary path variables for paths to WPT files. This broke every application that referenced SimSettings. These broken applications have been excluded from the build path until they can be split into their own projects and updated.
- Added Javadoc comments to SimSettings.
- Removed StarLSim's Main.java file. This project is no longer runnable.

8/30/2012, Adam
- Cleaned up MotionAutomaton, removed commented out lines of code
- Added straight line and circle motion applications

8/29/2012, Stan
- Made the simapp drawing occur only when logic thread is asleep to prevent having to worry about concurrent modification exceptions
- added MAX_FPS variable to SimSettings, which you can adjust if drawing is blocking for too long
- updates to deere_fardin simapp

8/28/2012, Stan
- Adjusted Project Build Properties to remove unnecessary dependencies
- Removed 3 SimApps due to external dependence on ojalgo (if you want to readd them make a seperate project not integrated in the simulator please!). Removed LucasApp1.java, NewApp.java, and RoughTravelApp.java
- Fixed capitalization for Common.java, ItemPosition.java, PositionList.java
- Added support for explicit blocking of the wireless for various robots in the simulator
- Added variable velocity support in IdealSimGpsProvider